Adjusted JVM garbage collection options to enable class unloading.